--- a/index.css
+++ b/index.css
@@ -86,6 +86,22 @@ a {
 
 
 
+/**** 制定 header 樣式 ****/
+header{
+  /* 基本樣式 */
+  width: 100%;
+  height: 60px;
+  text-align: center;
+  background: #ffffff;
+  box-shadow: 0px 2px 12px 0px rgba(0,0,0,0.1);
+
+  /* 定位 */
+  position: fixed;
+  z-index: 10;
+}
+
+
+
 /***** 撰寫專案共用樣式:電腦版 *****/
 @media screen and (min-width:768px){
   /* 共用按鈕樣式 */
