--- a/index.css
+++ b/index.css
@@ -278,6 +278,81 @@ header{
 }
 
 
+/**** 制定相片集 album 樣式 ****/
+.album-wrapper {
+  width: 100%;
+  
+  /* 大略排版: grid system */
+  display: grid;
+  /* 使用 auto-fit, 讓瀏覽器計算空間, 盡量鋪排圖片
+  minmax: 每達 min 就放一張圖片、盡量放 */
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1.5rem;
+}
+
+/* 調整圖卡大小 */
+.card {
+  width:100%;
+  height: 100%;
+  overflow: hidden; /* 超過格線的隱藏 */
+  box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.08);
+
+  /* 排版定位 */
+  position: relative;
+}
+
+/* 調整圖片投影大小 */
+.card-img {
+  width: 100%;
+  height: 300px;
+  display: block;
+  object-fit: cover; /* 圖片原比例縮放, 超過的裁掉 */
+}
+
+/* 相片文案樣式 */
+.card-text {
+  /* 排版定位 */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+  color: #fff;
+
+  /* 設計相片文案的轉場效果: hover */
+  transition: opacity .3s ease-out;
+  opacity: 0; /* 預設不顯示 */
+}
+
+.card-title {
+  font-size: 2rem;
+  margin-bottom: 0.2rem;
+}
+
+.card-description {
+  font-size: 1.5rem;
+}
+
+.card:hover .card-text {
+  opacity: 1;
+}
+
+
+/* 設計圖卡 hover 的轉場: 灰底 */
+.card-img {
+  transition: opacity .3s ease-out;
+  opacity: 1;
+}
+
+.card:hover .card-img {
+  opacity: 40%;
+}
+
+/* 圖卡設計成灰底, 圖片透明時, 文字可以顯示得更清楚 */
+.card {
+  background: #a9a9a9;
+}
+
 
 /***** 撰寫專案共用樣式:電腦版 *****/
 @media screen and (min-width:768px){
