--- a/index.css
+++ b/index.css
@@ -127,6 +127,7 @@ header{
 
 .nav-link {
   color: #267b98;
+  font-weight: 700;
 }
 
 
@@ -438,6 +439,17 @@ header{
 }
 
 
+/**** 制定 footer 樣式 ****/
+footer {
+  width:100%;
+  text-align: center;
+  background-color: #4a4a4a;
+  padding: 1rem;
+  color: #fff;
+  letter-spacing: 2px;
+}
+
+
 
 /***** 撰寫專案共用樣式:電腦版 *****/
 @media screen and (min-width:768px){
@@ -541,5 +553,5 @@ header{
   .adoption-description {
     font-size: 1.625rem;
   }
-  
+
 }
