補上 box-shodow 的不同瀏覽器

--- a/index.css
+++ b/index.css
@@ -94,6 +94,8 @@ header{
   text-align: center;
   background: #ffffff;
   box-shadow: 0px 2px 12px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.1);
 
   /* 定位 */
   position: fixed;
@@ -243,6 +245,8 @@ header{
   justify-content: flex-end;
   align-items: flex-end;
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.08);
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
 }
 
 .main-banner {
@@ -303,6 +307,8 @@ header{
   height: 100%;
   overflow: hidden; /* 超過格線的隱藏 */
   box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.08);
+  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
+  -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.08);
 
   /* 排版定位 */
   position: relative;
@@ -411,6 +417,8 @@ header{
   /* 樣式 */
   background-color: #fff;
   box-shadow: 2px 10px 12px 0px rgba(0,0,0,0.1);
+  -webkit-box-shadow: 2px 10px 12px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 2px 10px 12px 0px rgba(0, 0, 0, 0.1);
 }
 
 .adoption-image {
